F-Curve modal input is incorrect when set to Imperial units. #38877

Closed
opened 2014-02-27 21:23:04 +01:00 by David Radford · 7 comments

Windows 8.1 Pro x64
AMD FX-4350 (4.2ghz quad core)
32GB RAM
NVIDIA GTX 660 Ti (x2)

2.70 Testbuild (x64):
Date: 2014-02-20 05:32
Hash 10f4c62g
Branch: HEAD

Using modal input to translate keyframes in the F-Curve Editor incorrectly uses Metric to Imperial conversion.

  1. Set Units type to Imperial in the Scene panel.
  2. Create a keyframe on any object and open the F-Curve Editor to view it.
  3. Select the keyframe and type "G X 10".

In the bottom left of the F-Curve Editor window, notice the readout says:

   D:[10|] = 10' (3.0480) along X

Typing "G X 10" should move the keyframe 10 frames regardless of Unit type. However instead of moving 10 frames it has only moved 3.0480 frames. This appears to be caused by taking the Metric to Imperial conversion into account.

Note: This occurs with translating keyframes any number of frames.

Windows 8.1 Pro x64 AMD FX-4350 (4.2ghz quad core) 32GB RAM NVIDIA GTX 660 Ti (x2) 2.70 Testbuild (x64): Date: 2014-02-20 05:32 Hash 10f4c62g Branch: HEAD Using modal input to translate keyframes in the F-Curve Editor incorrectly uses Metric to Imperial conversion. 1) Set Units type to Imperial in the Scene panel. 2) Create a keyframe on any object and open the F-Curve Editor to view it. 3) Select the keyframe and type "G X 10". In the bottom left of the F-Curve Editor window, notice the readout says: ``` D:[10|] = 10' (3.0480) along X ``` Typing "G X 10" should move the keyframe 10 frames regardless of Unit type. However instead of moving 10 frames it has only moved 3.0480 frames. This appears to be caused by taking the Metric to Imperial conversion into account. Note: This occurs with translating keyframes any number of frames.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DavidRadford

Added subscriber: @DavidRadford
Bastien Montagne self-assigned this 2014-02-27 22:22:40 +01:00

That one is for me I guess… :P

That one is for me I guess… :P

This issue was referenced by blender/blender-addons-contrib@96a51e99fb

This issue was referenced by blender/blender-addons-contrib@96a51e99fb8a5dcb9e6b15eed876d7ea6f1cc94b

This issue was referenced by 96a51e99fb

This issue was referenced by 96a51e99fb8a5dcb9e6b15eed876d7ea6f1cc94b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 96a51e99fb.

Closed by commit 96a51e99fb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38877
No description provided.