Fix T38877: F-Curve modal input is incorrect when set to Imperial units.

Using length units outside of 3dview does not make sense...